[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carcara"
version = "25.12.0"
authors = [
  { name="Leandro Seixas", email="leandro.seixas@proton.me" },
]
description = "Machine learning for atomistic simulations."
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.10"
dependencies = [
    'numpy>=2.0.0',
    'pandas',
    'ase',
    'torch',
    'torch_geometric',
    'networkx',
    'scipy',
    'matplotlib',
    'pytest',
    'pyyaml',
    'ml_dtypes'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/seixasgroup/carcara"
# "Documentation" = "https://seixasgroup.github.io/carcara/"
"Bug Tracker" = "https://github.com/seixasgroup/carcara/issues"
